--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ body {
 	font-size: 24px;
 }
 
-h1 {
+h1, h2 {
 	color: lightpink;
 }
 
@@ -19,4 +19,10 @@ em {
 
 img {
 	outline: 10px solid lightpink;
+}
+
+ul {
+	list-style-type: circle;
+	display: inline-block;
+	text-align: left;
 }
